bugs fixed task 4

--- a/les_1/task4/task_4-3/main.tmpl
+++ b/les_1/task4/task_4-3/main.tmpl
@@ -8,7 +8,7 @@
 <h1>{{ H1-TITLE }}</h1>
 {{ DESCRIPTION }}
 <br><br>
-{{ IMAGE }}
+<img src="{{ IMAGE }}" alt="aviator">
 <br><br>
 <br><br>
 <b>Просто пример жирного текста</b>
